--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -7,8 +7,11 @@
   font-weight: 700;
   letter-spacing: 2px;
   line-height: 20px;
-  padding: 15px 30px;
+  padding: 15px 15px;
   text-transform: uppercase;
+  background-color: #eee;
+  border-radius: 4px;
+  color: #000;
 
   p {
     margin: 10px;
@@ -16,7 +19,7 @@
     border-radius: 5px;
 
     &:hover {
-      background-color: red;
+      background-color: #393b43;
     }
   }
 }
